--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -23,17 +23,9 @@ search:
   no_results: Oops! No result founds.
 
 panel:
-  lastmod: Recent Update
+  lastmod: Recently Updated
   trending_tags: Trending Tags
   toc: Contents
-
-#  The liquid date format › http://strftime.net/
-date_format:
-  tooltip: '%a, %b %e, %Y, %l:%M %p %z'
-  post:
-    long: '%b %e, %Y'
-    short: '%b %e'
-    archive_month: '%b'
 
 copyright:
   # Shown at the bottom of the post
@@ -43,12 +35,12 @@ copyright:
     link: https://creativecommons.org/licenses/by/4.0/
 
   # Displayed in the footer
-  brief: All rights reserved.
+  brief: Some rights reserved.
   verbose: >-
     Except where otherwise noted, the blog posts on this site are licensed
     under the Creative Commons Attribution 4.0 International (CC BY 4.0) License by the author.
 
-meta: Powered by Web Ark Engine
+meta: Powered by :PLATFORM with :THEME theme.
 
 not_found:
   statment: Sorry, we've misplaced that URL or it's pointing to something that doesn't exist.
@@ -62,11 +54,6 @@ post:
   written_by: By
   posted: Posted
   updated: Updated
-  timeago:
-    day: days ago
-    hour: hours ago
-    minute: minutes ago
-    just_now: just now
   words: words
   pageview_measure: views
   read_time:
